add proxy for auth service
